icon to foreground and cart page design tweaks

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,6 +16,8 @@ p {font-size: 22px;}
 .text-purple {color: #AA83BC;}
 .btn-pink {background: #FFA7A5;}
 .btn-pink:hover {background: #FFB4B1;}
+.btn-yellow-outline {border: 2px solid #f3ec5d}
+.btn-yellow-outline:hover {background: #f3ec5d}
 
 .brand-light-blue {color: #84ccf1;}
 .brand-dark-blue {color: #3574ba;}
