--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,12 @@
 h1 {font-size: 66px;}
 h3 {font-size: 44px;}
 p {font-size: 22px;}
+/* Styles for screens less than 768px wide */
+@media (max-width: 768px) {
+    h1 {font-size: 44px; /* Smaller font size for mobile */}
+    h3 {font-size: 32px; /* Smaller font size for mobile */}
+    p {font-size: 18px; /* Smaller font size for mobile */}
+}
 
 .text-blue {color: #10C1EA;}
 .text-yellow {color: #F4EC43;}
